# BME680

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  STRUCTURE.md  nohup.out  pyproject.toml  requirements.txt  sensor.py  sensor_control.sh  setup.py  start_sensor.sh
config/: config.yaml
docs/: AIR_QUALITY_ALGORITHM.md  CHANGELOG.md  COMFORT_INTERPRETATIONS.md  MIGRATION.md  README.md
scripts/: bme680-sensor.service  sensor_control.sh
src/bme680_monitor/: __init__.py  air_quality.py  comfort_index.py  config.py  data_logger.py  display.py  sensor_manager.py
tests/: __init__.py  test_air_quality.py  test_config.py  test_data_logger.py
